--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #0D0D0D;
+  overflow-x: hidden;
 }
 
 code {
@@ -27,7 +29,7 @@ code {
   
 }
 
-.Source-Sans{
+.SourceSans{
   font-family: 'Source Sans 3', sans-serif;
 }
 
@@ -35,6 +37,6 @@ code {
   font-family: 'Sora', sans-serif;
 }
 
-.Work-Sans{
+.WorkSans{
   font-family: 'Work Sans', sans-serif;
 }
